# rc-mount-gui

./: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  rc_mount_gui.py  tailwind.config.ts  tsconfig.json  tsconfig.web.json
src/lib/components/ui/button/: button.svelte
src/main/: config.ts  index.ts  rc-service.ts  rclone-service.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.svelte  main.ts
src/renderer/src/components/: Versions.svelte
