[project]
name = "rc-mount-gui"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandru Olareanu",email = "alexandruola@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "textual (>=3.0.1,<4.0.0)",
    "textual-dev (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
